src/test/deca/context/invalid/fields/method_redeclaration_conflict_with_field.deca
// Description :
//    Déclaration d'une méthode ayant le même nom qu'un champ.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f() {
        return 1;
    }
    int f;
}

{
}

